fix code overflow

--- a/themes/sisyphus/static/css/style.css
+++ b/themes/sisyphus/static/css/style.css
@@ -70,6 +70,8 @@ code {
   font-family: monospace;
   font-size: 16px;
   border-radius: 5px;
+  word-wrap: break-word;
+  overflow-x: auto;
 }
 
 header {
